--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <div id="position"> 
-      <h1 id="positionDesc">position</h1>  
+      <h1 id="positionDesc">position</h1>
+      <div>
+        <span> Dim reduction </span>
+        <select name="Dimensionally reduction" id="dimType">
+          <option value="tsne">TSNE</option>
+          <option value="pca">PCA</option>
+        </select>
+      </div>
     </div>
   </body>
 </html>
