--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
           <option value="pca">PCA</option>
         </select>
       </div>
+      <div>
+        <h3> Currently look at the Novel </h4>
+        <div>
+          <img src="" alt="image" class="image" id="targetImage">
+        </div>
+        <p id="novelPosition"></p>
+        <p id="novelCatogery"></p>
+        <h3 id="novelDisplay"></h3>
+      </div>
     </div>
   </body>
 </html>
